Subiendo cambios finales

--- a/index.html
+++ b/index.html
@@ -15,8 +15,34 @@
     <div class="titulo">
         <h1>¿Que tanto sabes de League of Legends?</h1>
     </div>
+
+    <div class="contImag">
+        <img class="imagen" src="https://i.blogs.es/ff4f41/elqk-v1wmauw09m/1366_2000.jpg" alt="Imagen LOL">
+    </div>
+
+    <div class="reglas">
+        <h4>Bienvenido invocador, el presente juego consiste en poner a prueba tu conocimiento sobre League of Legends,
+            un juego creado por la empresa Riot Games. El juego consta de 5 niveles, en cada nivel te aparecerá una pregunta con múltiple respuesta, de las cuales solo una es correcta, en cada nivel se 
+            aumenta la dificultad, si respondes de manera correcta, ganaras Riot Points, los cuales se recargaran a tu cuenta en el juego para que así
+            puedas comprar esa skin que tanto quieres para tu campeón favorito. </h4>
+        <h4 class="medio">
+            Las reglas del juego son muy sencillas, en cada nivel tendrás que responder la pregunta, si respondes bien te ganarás un premio en RP(Riot Points) de acuerdo a el nivel,
+            si el nivel es más alto ganarás más,  dicho premio se acumulará mientras no te equivoques en ninguna respuesta, ya que si te equivocas sin importar el nivel perderás todo lo que has 
+            ganado, si pasas el nivel uno ganaras 500RP, nivel dos 1000Rp, nivel tres 2000RP, nivel cuatro 4000RP y nivel cinco 8000RP, sin embargo, en todos los niveles puedes decidir si responder la pregunta o retirarte con lo que has ganado hasta el momento, solo recuerda que si te equivocas en una sola respuesta perderás todo.
+        </h4>
+        <h4>
+            Entonces, ¿qué esperas para jugar?, da click en el botón para comenzar el juego. 
+        </h4>
+    </div>
+
+    <div class="botonComenzar">
+        <button type="reset" class="btn btn-primary" onclick="iniciarJuego()">Iniciar el juego</button>
+    </div>
     
-    <button type="reset" class="btn btn-primary" onclick="irRegistro()">Ir a registro</button>
+    <footer>
+        <h3>Creado por Edward Reina Hortua</h3>
+    </footer>
+
     <script src="./js/index.js"></script>
 </body>
 </html>
